syntax = "proto3";

service Registry {
    rpc Start(StartParams) returns (Tracker) {}
    rpc Stop(StopParams) returns (Tracker) {}
}

message Role {
    message Record {
        bytes recording_id = 1;
    }

    oneof role {
        Record record = 1;
    }
}

message StartParams {
    bytes room_id = 1;
    Role role = 2;
    int64 expire_in_ms = 3;
}

message StopParams {
    bytes room_id = 1;
    Role role = 2;
}

message Tracker {
    bytes room_id = 1;
    Role role = 2;
    int64 started_at = 3;
    int64 expires_at = 4;
    bool already_exists = 5;
}
